--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ addons:
 install:
 # Travis doesn't have a nice way to install homebrew packages yet.
 # https://github.com/travis-ci/travis-ci/issues/5377
+- if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install gcc@6; fi
 # /usr/bin/gcc is stuck to old versions by on both Linux and OSX.
 - if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
