--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,10 @@ target_sources(berrydb
     "${PROJECT_SOURCE_DIR}/src/api/store.cc"
     "${PROJECT_SOURCE_DIR}/src/api/transaction.cc"
     "${PROJECT_SOURCE_DIR}/src/api/vfs.cc"
-    "${PROJECT_SOURCE_DIR}/src/page.h"
+    "${PROJECT_SOURCE_DIR}/src/format/store_header.cc"
+    "${PROJECT_SOURCE_DIR}/src/format/store_header.h"
     "${PROJECT_SOURCE_DIR}/src/page.cc"
+    "${PROJECT_SOURCE_DIR}/src/page.h"
     "${PROJECT_SOURCE_DIR}/src/catalog_impl.cc"
     "${PROJECT_SOURCE_DIR}/src/catalog_impl.h"
     "${PROJECT_SOURCE_DIR}/src/page_pool.cc"
@@ -99,6 +101,7 @@ target_sources(berrydb
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/alloc.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/dcheck.h"
+    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/endianness.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/string_view.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/types.h"
     "${PROJECT_SOURCE_DIR}/include/berrydb.h"
@@ -133,8 +136,10 @@ if (BUILD_TESTS)
       "${PROJECT_SOURCE_DIR}/src/api/store_unittest.cc"
       "${PROJECT_BINARY_DIR}/src/api/version_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/alloc_unittest.cc"
+      "${PROJECT_SOURCE_DIR}/src/embedder_tests/endianness_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/string_view_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/vfs_unittest.cc"
+      "${PROJECT_SOURCE_DIR}/src/format/store_header_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/page_pool_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/page_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/test/block_access_file_wrapper.cc"
