WiP: Track the unused pages in a store data file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,10 @@ target_sources(berrydb
     "${PROJECT_SOURCE_DIR}/src/page.h"
     "${PROJECT_SOURCE_DIR}/src/catalog_impl.cc"
     "${PROJECT_SOURCE_DIR}/src/catalog_impl.h"
+    "${PROJECT_SOURCE_DIR}/src/free_page_list.cc"
+    "${PROJECT_SOURCE_DIR}/src/free_page_list.h"
+    "${PROJECT_SOURCE_DIR}/src/free_page_manager.cc"
+    "${PROJECT_SOURCE_DIR}/src/free_page_manager.h"
     "${PROJECT_SOURCE_DIR}/src/page_pool.cc"
     "${PROJECT_SOURCE_DIR}/src/page_pool.h"
     "${PROJECT_SOURCE_DIR}/src/pool_impl.cc"
