WiP (more): Track unused pages in a store data file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ target_sources(berrydb
     "${PROJECT_SOURCE_DIR}/src/page.h"
     "${PROJECT_SOURCE_DIR}/src/catalog_impl.cc"
     "${PROJECT_SOURCE_DIR}/src/catalog_impl.h"
+    "${PROJECT_SOURCE_DIR}/src/free_page_list_format.h"
     "${PROJECT_SOURCE_DIR}/src/free_page_list.cc"
     "${PROJECT_SOURCE_DIR}/src/free_page_list.h"
     "${PROJECT_SOURCE_DIR}/src/free_page_manager.cc"
@@ -167,6 +168,8 @@ if (BERRYDB_BUILD_TESTS)
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/string_view_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/vfs_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/format/store_header_unittest.cc"
+      "${PROJECT_SOURCE_DIR}/src/free_page_list_format_unittest.cc"
+      "${PROJECT_SOURCE_DIR}/src/free_page_list_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/page_pool_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/page_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/store_impl_unittest.cc"
